2011-02-08 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-selector.c
    Replace search capability with filter capability in gtk-sat-selector.

    * data/desktop/gpredict.desktop.in
    * pixmaps/icons/Makefile.am
    Install a copy of gpredict-icon.png to pixmaps directory.
    Change gpredict.desktop to reference this new copy.
    Resolves part of Bug 3113190.

2011-02-02 Charles Suprin <hamaa1vs at gmail.com>

    * src/mod-cfg.c
    Sort QTH list alphabetically when configuring module.

    * src/gtk-sat-selector.c
    Sort Satellites Groups alphabetically in combo box.

    * src/gtk-single-sat.c
    List satellites in single sat view alphabetically instead of hash order.

2011-02-01 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    Manage keyboard PTT event only if rig is RIG_TYPE_TOGGLE_MAN.

    * src/defaults.h:
    Deleted obsolete file.


2011-01-24 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Fix bug where tle file suffix compare is case dependent.
    <https://bugs.launchpad.net/bugs/706452>


2010-12-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Make rotator lead satellite on update.
    Restructure error handling for cleaner code.


2010-12-26 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-map.c:
    Removed dead code in coordinate conversion (it was nonsense anyway).


2010-12-10 Charles Suprin <hamaa1vs at gmail.com>

    * data/locations.dat
    Add entries to locations.dat and add state to Mexican locations.


2010-11-25 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Move rotor to end of pass if below horizon and after current pass


2010-11-24 Alexandru Csete <oz9aec at gmail.com>

    * src/Makefile.am:
    Fixed PACKAGE_LOCALE_DIR.


2010-11-23 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    * src/gtk-rig-ctrl.c
    Close socket in gtk-rig/rot-ctrl when window closes if applicable.

